--- a/summary_plot.ipynb
+++ b/summary_plot.ipynb
@@ -8,24 +8,11 @@
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In /Users/fbianchini/anaconda2/envs/py3/lib/python3.6/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle: \n",
-      "The text.latex.preview rcparam was deprecated in Matplotlib 3.3 and will be removed two minor releases later.\n",
-      "In /Users/fbianchini/anaconda2/envs/py3/lib/python3.6/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle: \n",
-      "The mathtext.fallback_to_cm rcparam was deprecated in Matplotlib 3.3 and will be removed two minor releases later.\n",
-      "In /Users/fbianchini/anaconda2/envs/py3/lib/python3.6/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle: Support for setting the 'mathtext.fallback_to_cm' rcParam is deprecated since 3.3 and will be removed two minor releases later; use 'mathtext.fallback : 'cm' instead.\n",
-      "In /Users/fbianchini/anaconda2/envs/py3/lib/python3.6/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle: \n",
-      "The validate_bool_maybe_none function was deprecated in Matplotlib 3.3 and will be removed two minor releases later.\n",
-      "In /Users/fbianchini/anaconda2/envs/py3/lib/python3.6/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle: \n",
-      "The savefig.jpeg_quality rcparam was deprecated in Matplotlib 3.3 and will be removed two minor releases later.\n",
-      "In /Users/fbianchini/anaconda2/envs/py3/lib/python3.6/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle: \n",
-      "The keymap.all_axes rcparam was deprecated in Matplotlib 3.3 and will be removed two minor releases later.\n",
-      "In /Users/fbianchini/anaconda2/envs/py3/lib/python3.6/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle: \n",
-      "The animation.avconv_path rcparam was deprecated in Matplotlib 3.3 and will be removed two minor releases later.\n",
-      "In /Users/fbianchini/anaconda2/envs/py3/lib/python3.6/site-packages/matplotlib/mpl-data/stylelib/_classic_test.mplstyle: \n",
-      "The animation.avconv_args rcparam was deprecated in Matplotlib 3.3 and will be removed two minor releases later.\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
@@ -51,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -85,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -123,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -135,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -161,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -184,7 +171,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# CMB exps data\n",
@@ -225,7 +214,7 @@
     "spt3g_xerr_te = (spt3g_lmax - spt3g_lmin)/2\n",
     "\n",
     "# SPT-pol BB ==>  Lcenter Lmin Lmax Dl sigma(Dl)\n",
-    "sptpol_l_bb, sptpol_lmin, sptpol_lmax, sptpol_dl_bb, sptpol_dl_err_bb = np.loadtxt('/Users/fbianchini/Downloads/bb_plotting.txt', unpack=1,)\n",
+    "sptpol_l_bb, sptpol_lmin, sptpol_lmax, sptpol_dl_bb, sptpol_dl_err_bb = np.loadtxt('data/bb_plotting.txt', unpack=1,)\n",
     "sptpol_xerr_bb = (sptpol_lmax - sptpol_lmin)/2\n",
     "\n",
     "\n",
